<resources>
    <string name="app_name">AppManager</string>
    <string name="item_app_name_hint">iQiyi</string>
    <string name="item_app_size_hint">27.11MB</string>
    <string name="activity_tab_all">All</string>
    <string name="activity_tab_running">Running</string>
    <string name="activity_toast_quit">Please press again for quition</string>
    <string name="frag_list_app_empty_hint">No Applications</string>
    <string name="activity_main_option_search_file">Search</string>
    <string name="activity_main_option_sort_file">Sort</string>
    <string name="activity_main_option_sort_all">All Apps</string>
    <string name="activity_main_option_sort_system">System Apps</string>
    <string name="activity_main_option_sort_user">User Apps</string>
    <string name="activity_main_search_title">Please input app name</string>
    <string name="frag_app_running_available">available:</string>
    <string name="frag_app_running_total">total:</string>
    <string name="activity_main_option_use_histoty">Using History</string>
    <string name="activity_main_waiting">Loading...\\nWait for now</string>
    <string name="activity_main_waiting_title">waiting</string>
    <string name="app_days">day</string>
    <string name="app_hours">hour</string>
    <string name="app_minutes">minute</string>
    <string name="app_second">scond</string>
    <string name="frag_adapter_error">Get Error</string>
    <string name="activity_using_detail_time">Betwin Time</string>
    <string name="activity_using_detail_app_number">Using App Number</string>
    <string name="activity_using_detail_app_strup">App Strup Time</string>
    <string name="activity_using_history_option_recent">RecentDays</string>
    <string name="activity_using_detail_screen_lock">Screen Locks</string>
    <string name="activity_using_detail_screen_using">Using Time</string>
    <string name="frag_app_more_run">Run</string>
    <string name="frag_app_more_lock">Lock</string>
    <string name="frag_app_unload">Unload</string>
    <string name="frag_adapter_run_fail">Sorry,Run fail</string>
    <string name="frag_adapter_no_run">Sorry,app mustn\'t start</string>
    <string name="frag_adapter_system_unload_fail">Can\'t unload system application.</string>
    <string name="frag_app_more_share">Share</string>
    <string name="frag_adapter_share_title">Share</string>
    <string name="frag_adapter_share_front">It is a good app here,let me introduce it to you:</string>
    <string name="frag_adapter_share_behind">The message was from AppManager</string>
    <string name="keybord_clear">Clear</string>
    <string name="input_pwd_edit">Input Password</string>
    <string name="input_button_ok">OK</string>
    <string name="lock_pwd_empty">Password should\'t be empty</string>
    <string name="lock_pwd_error">Password Error</string>
    <string name="frag_adapter_lock_success">Lock Success.</string>
    <string name="frag_input_pwd">Please input the password.</string>
    <string name="frag_input_pwd_avlidate">Password invalidate。</string>
    <string name="frag_adapter_unlock_success">Unlock Succuess.</string>
    <string name="frag_input_pwd_again">Please input the password again</string>
    <string name="frag_input_pwd_nomatch">Twince passord isn\'t match.</string>
    <string name="input_button_reset">Reset</string>
    <string name="input_button_cancel">Cancel</string>
</resources>
