<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/activity_using_detail_time"
        android:id="@+id/tex_time" />

    <TextView
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/activity_using_detail_app_number"
        android:id="@+id/text_app_number" />

    <TextView
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/activity_using_detail_app_strup"
        android:id="@+id/text_app_strup" />
</LinearLayout>