<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.MainActivity">

    <!--应用栏-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </android.support.v7.widget.Toolbar>

        <!--        <android.support.design.widget.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabIndicatorColor="#000000"
                    app:tabSelectedTextColor="@color/colorAccent"
                    app:tabTextColor="#ffffff" />-->

    </android.support.design.widget.AppBarLayout>

    <!-- 主活动的内容 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tex_time_desc"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_using_detail_time" />

            <TextView
                android:id="@+id/text_app_number_desc"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_using_detail_app_number" />

            <TextView
                android:id="@+id/text_app_strup_desc"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_using_detail_app_strup" />

            <TextView
                android:id="@+id/text_screen_lock_desc"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_using_detail_screen_lock" />

            <TextView
                android:id="@+id/text_screen_using_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_using_detail_screen_using" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_using_apps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:dividerHeight="2dp"
            android:visibility="visible">

        </ListView>

        <LinearLayout
            android:id="@+id/ll_using_app_list_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_mode_comment_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/frag_list_app_empty_hint"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
