<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/viewbackground" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:text="安全验证"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#ff00ff66"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_lock_app_icon"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:id="@+id/tv_lock_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:textColor="#ffbc04e5"
            android:text="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"

        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_lock_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="20dip"
            android:layout_weight="0.36"
            android:background="#cccccc"
            android:hint="@string/input_pwd_edit"
            android:inputType="textPassword"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/input_button_ok"
            android:textSize="20dp"  />
    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dip"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible"
        />
</LinearLayout>
