<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_current_date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="2016-5-29"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <ListView
        android:layout_weight="11"
        android:id="@+id/list_apps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:layout_weight="11"
        android:id="@+id/ll_app_list_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_mode_comment_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/frag_list_app_empty_hint"
            android:textSize="24sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:padding="16dp"
        android:id="@+id/ll_show_ramsize"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_show_valible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:layout_weight="1"
                android:text="@string/frag_app_running_available" />
            <TextView
                android:id="@+id/text_show_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/frag_app_running_total" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_size_percent"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:max="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>